--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,9 +15,9 @@ SQLAlchemy = "^2.0.44"
 torch = "^2.9.0"
 torchvision = "^0.24.0"
 segmentation-models-pytorch = "^0.4.0"
-# GUI framework (uncomment or replace as needed)
-# pyqt5 = "^5.15"
-# tkinter is built-in
+numpy = "^1.24.0"
+opencv-python = "^4.7.0"
+scikit-image = "^0.20.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.0"
