--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ segmentation-models-pytorch = "^0.4.0"
 numpy = "^1.24.0"
 opencv-python = "^4.7.0"
 scikit-image = "^0.20.0"
+sklearn = "^1.4.2"
+numba = "^0.57.0"
+networkx = "^3.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.0"
